seeing a bug on iOS so trying to see if this does it
plus some spacing cleanup

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
 
 body {
   background: #000 url("./assets/stars.webp") fixed top left;
+  background-position: fixed;
   background-size: 500px;
 }
 
@@ -155,6 +156,9 @@ input:checked + .label::before {
   margin: 0;
   font-weight: 400;
 }
+.card h3 {
+  line-height: 1.25;
+}
 
 .card p {
   display: flex;
@@ -246,13 +250,10 @@ input:checked + .label::before {
   
   #support {
     display: flex;
+    justify-content: space-evenly;
     align-content: center;
     border-top: 1px solid var(--border-background);
     margin-top: 1rem;
     padding-top: .5rem;
-  }
-  
-  #support a:not(:first-child) {
-    margin-left: .5rem;
   }
 }
